--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "nuxt-vuex-localstorage": "^1.3.0",
     "nuxtjs-multi-auth": "^0.0.6",
     "vue": "^2.6.14",
+    "vue-cookies": "^1.8.1",
+    "vue-localstorage": "^0.6.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
